--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,9 @@ csharp_new_line_before_finally = false
 csharp_new_line_before_members_in_object_initializers = false
 csharp_new_line_before_members_in_anonymous_types = false
 csharp_new_line_between_query_expression_clauses = false
+
+# IDE0210: Convert to top-level statements
+csharp_style_prefer_top_level_statements = false
+
+# IDE0090: Use 'new(...)'
+csharp_style_implicit_object_creation_when_type_is_apparent = false
