--- a/beacon.csproj
+++ b/beacon.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Net.Http"/>
     <Reference Include="System.Windows.Forms"/>
     <Reference Include="System.Reflection" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
