--- a/.editorconfig
+++ b/.editorconfig
@@ -20,6 +20,10 @@ csharp_style_prefer_top_level_statements = false
 # IDE0090: Use 'new(...)'
 csharp_style_implicit_object_creation_when_type_is_apparent = false
 
+dotnet_style_qualification_for_field = true:warning
+dotnet_style_qualification_for_property = true:warning
+dotnet_style_qualification_for_method = true:warning
+
 # Properties and methods use camel case
 dotnet_naming_rule.properties_and_methods_should_be_camelcase.severity = suggestion
 dotnet_naming_rule.properties_and_methods_should_be_camelcase.symbols = properties_and_methods
