--- a/beacon.csproj
+++ b/beacon.csproj
@@ -8,6 +8,7 @@
         <TargetFramework>.NETFramework,Version=v4.8</TargetFramework>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <AssemblyName>beacon</AssemblyName>
+        <RootNamespace>Beacon</RootNamespace>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
         <GenerateProgramFile>false</GenerateProgramFile>
@@ -52,11 +53,6 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Beacon.cs"/>
-        <Compile Include="Resources.Designer.cs">
-          <DesignTime>True</DesignTime>
-          <AutoGen>True</AutoGen>
-          <DependentUpon>Resources.resx</DependentUpon>
-        </Compile>
         <Compile Include="WorkspaceTests/*.cs"/>
         <Compile Include="Sentry.cs"/>
         <Compile Include="ZipReader.cs"/>
@@ -68,20 +64,6 @@
         </Compile>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <EmbeddedResource Include="MainForm.resx" />
-        <EmbeddedResource Include="Properties\Resources.resx">
-            <Generator>ResXFileCodeGenerator</Generator>
-            <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-            <SubType>Designer</SubType>
-        </EmbeddedResource>
-        <Compile Include="Properties\Resources.Designer.cs">
-            <AutoGen>True</AutoGen>
-            <DependentUpon>Resources.resx</DependentUpon>
-        </Compile>
-        <EmbeddedResource Include="Resources.resx">
-          <Generator>ResXFileCodeGenerator</Generator>
-          <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-          <DependentUpon>MainForm.cs</DependentUpon>
-        </EmbeddedResource>
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -90,6 +72,15 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Settings.settings</DependentUpon>
             <DesignTimeSharedInput>True</DesignTimeSharedInput>
+        </Compile>
+        <EmbeddedResource Include="Properties\Resources.resx">
+            <Generator>ResXFileCodeGenerator</Generator>
+            <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+            <SubType>Designer</SubType>
+        </EmbeddedResource>
+        <Compile Include="Properties\Resources.Designer.cs">
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
         <Content Include="test.zip">
             <Link>test.zip</Link>
