--- a/beacon.csproj
+++ b/beacon.csproj
@@ -42,6 +42,7 @@
         <Reference Include="System.Data.DataSetExtensions"/>
         <Reference Include="Microsoft.CSharp"/>
         <Reference Include="System.Data"/>
+        <Reference Include="System.Windows.Interop"/>
         <Reference Include="System.Deployment"/>
         <Reference Include="System.Drawing"/>
         <Reference Include="System.Net.Http"/>
@@ -53,7 +54,8 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Beacon.cs"/>
-        <Compile Include="Plugins\Plugin.cs"/>
+        <Compile Include="Plugins\BeaconPlugin.cs"/>
+        <Compile Include="Plugins\PluginLoader.cs"/>
         <Compile Include="WorkspaceTests/*.cs"/>
         <Compile Include="Sentry.cs"/>
         <Compile Include="ZipReader.cs"/>
@@ -83,10 +85,6 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
-        <Content Include="test.zip">
-            <Link>test.zip</Link>
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
     </ItemGroup>
     <ItemGroup>
         <None Include="App.config"/>
