--- a/beacon.csproj
+++ b/beacon.csproj
@@ -50,6 +50,7 @@
         <Reference Include="System.Reflection"/>
         <Reference Include="System.IO.Compression"/>
         <Reference Include="System.IO.Compression.FileSystem"/>
+        <Reference Include="System.Web"/>
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
