--- a/beacon.csproj
+++ b/beacon.csproj
@@ -95,6 +95,7 @@
     <ItemGroup>
         <Content Include="Resources\beacon.png"/>
         <Content Include="Resources\icon.ico"/>
+        <Content Include="Resources\preview.png"/>
         <EmbeddedResource Include="Resources\JetBrains Mono.ttf"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
